[gd_scene load_steps=7 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://mountain_grid_lobby screen.jpg" type="Texture" id=2]
[ext_resource path="res://start_back.png" type="Texture" id=3]
[ext_resource path="res://Start_button.png" type="Texture" id=4]
[ext_resource path="res://toolbar.png" type="Texture" id=5]
[ext_resource path="res://start.png" type="Texture" id=6]

[node name="Container" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 801.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TextureRect" type="Sprite" parent="." index="0"]

position = Vector2( 639.41, 400.025 )
scale = Vector2( 1.24597, 1.48198 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="back" type="Sprite" parent="." index="1"]

position = Vector2( 660.51, 415.125 )
scale = Vector2( 0.55389, 0.502907 )
texture = ExtResource( 3 )

[node name="startButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 520.0
margin_top = 380.0
margin_right = 789.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="playerList" type="RichTextLabel" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 220.0
margin_right = 410.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_top = 202.0
margin_right = 326.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player List"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="invitePlayerName" type="LineEdit" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1081.0
margin_top = 286.0
margin_right = 1244.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="invitePlayerButton" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1110.0
margin_top = 234.0
margin_right = 1202.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Invite Player"
flat = false
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="." index="7"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="toolbar" type="Sprite" parent="." index="8"]

position = Vector2( 640, 788 )
scale = Vector2( 0.44475, 0.4121 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="start" type="Sprite" parent="." index="9"]

position = Vector2( 96.9711, 635.732 )
scale = Vector2( 0.260742, 0.253921 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]

[connection signal="pressed" from="invitePlayerButton" to="." method="_on_invitePlayerButton_pressed"]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]


